--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         
         <h1>Info</h1>
         <p>Lorem ipsum dele la aron er homo</p>
-        <p>Lorem ipsum dele la aron liker gutter</p>
+        <p>Lorem ipsum dele la aron liker bare gutter</p>
     </main>
 
     <footer>
-        <img class="spiker" src="bilder/spiker.png" alt="Volleyball Spiker">
+        <img class="spiker" src="Bilder/spiker.png" alt="Volleyball Spiker">
         <img class="net" src="Bilder/illustration-of-volleyball-net-png.png" alt="Volleyball Net">
         
         <p>&copy; 2025, Aron Benedict Magnus Folkestad.</p>
