--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <iframe width="711" height="415" src="https://www.youtube.com/embed/nuwHRSA4-o4" title="Spillerene hos Kolberg Volleyball Klubb" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         
         <h1>Info</h1>
-        <p>Lorem ipsum dele la aron er homo</p>
-        <p>Lorem ipsum dele la aron liker bare gutter</p>
+        <p>Hei, mitt navn er Aron Folkestad og jeg er en innholdsprodusent og medie intressert student på Glemmen videregående skole.</p>
+        <p>Her har jeg filmet Kolberg volleyball klubb. En klubb med gode spillere både på og utenfår banen. </p>
     </main>
 
     <footer>
