--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <header>
     <div class="container">
       <div class="contact-top">Telefon: <a href="tel:+4799128292">+47 99128292</a> | E-post: <a href="mailto:aron.b.folk@gmail.com">aron.b.folk@gmail.com</a></div>
-      <a href="IMG_CV1234.jpg" target="_blank"><img src="IMG_CV1234.jpg" alt="Portrett av Aron Benedict Magnus Folkestad"></a>
+      <a href="bilder/IMG_CV1234.jpg" target="_blank"><img src="bilder/IMG_CV1234.jpg" alt="Portrett av Aron Benedict Magnus Folkestad"></a>
       <h1>Aron Benedict Magnus Folkestad</h1>
       <p>Engasjert, strukturert og målrettet. Leverer alltid kvalitet og ferdigstiller prosjekter innen avtalt tid.</p>
     </div>
@@ -125,8 +125,8 @@
       <h2>Tidligere prosjekter</h2>
 
       <!-- Illustrasjonsbilde utenfor kortet -->
-      <a href="IMG_VIDEOOP.png" target="_blank">
-        <img src="IMG_VIDEOOP.png" alt="Prosjektbilde" style="width:200px; border-radius:12px; box-shadow:0 6px 28px rgba(0,0,0,.25); margin:12px 0;">
+      <a href="bilder/IMG_VIDEOOP.png" target="_blank">
+        <img src="bilder/IMG_VIDEOOP.png" alt="Prosjektbilde" style="width:200px; border-radius:12px; box-shadow:0 6px 28px rgba(0,0,0,.25); margin:12px 0;">
       </a>
 
       <!-- Innebygde videoer -->
