--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <header>
     <div class="container">
       <div class="contact-top">Telefon: <a href="tel:+4799128292">+47 99128292</a> | E-post: <a href="mailto:aron.b.folk@gmail.com">aron.b.folk@gmail.com</a></div>
-      <a href="bilder/IMG_CV1234.jpg" target="_blank"><img src="bilder/IMG_CV1234.jpg" alt="Portrett av Aron Benedict Magnus Folkestad"></a>
+      <a href="Bilder/IMG_CV1234.jpg" target="_blank"><img src="Bilder/IMG_CV1234.jpg" alt="Portrett av Aron Benedict Magnus Folkestad"></a>
       <h1>Aron Benedict Magnus Folkestad</h1>
       <p>Engasjert, strukturert og målrettet. Leverer alltid kvalitet og ferdigstiller prosjekter innen avtalt tid.</p>
     </div>
