--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
       <h2>Tidligere prosjekter</h2>
 
       <!-- Illustrasjonsbilde utenfor kortet -->
-      <a href="bilder/IMG_VIDEOOP.png" target="_blank">
-        <img src="bilder/IMG_VIDEOOP.png" alt="Prosjektbilde" style="width:200px; border-radius:12px; box-shadow:0 6px 28px rgba(0,0,0,.25); margin:12px 0;">
+      <a href="Bilder/IMG_VIDEOOP.png" target="_blank">
+        <img src="Bilder/IMG_VIDEOOP.pngg" alt="Prosjektbilde" style="width:200px; border-radius:12px; box-shadow:0 6px 28px rgba(0,0,0,.25); margin:12px 0;">
       </a>
 
       <!-- Innebygde videoer -->
