--- a/index.html
+++ b/index.html
@@ -34,15 +34,57 @@
   <section class="hero">
     <h2 data-no="Nyeste prosjekt" data-en="Latest project">Nyeste prosjekt</h2>
     <div class="video-frame">
-      <iframe src="https://drive.google.com/file/d/VIDEO_ID/preview" allow="autoplay"></iframe>
+      <iframe src="https://drive.google.com/file/d/1MJ8R-8zVDB3qmyHoAP__SnrmKLm5354Q/preview" allow="autoplay"></iframe>
+    </div>
+    <!-- Print-only fallback for hero video -->
+    <div class="print-video-placeholder">
+      <p data-no="[Video: Et ekko av henne – se online-versjon for avspilling]"
+         data-en="[Video: An echo of her voice – see online version to watch]">[Video: Et ekko av henne – se online-versjon for avspilling]</p>
     </div>
     <div class="video-meta" data-no="Et ekko av henne – Produsent" data-en="An echo of her voice – Producer">Et ekko av henne – Produsent</div>
   </section>
 
   <section class="experience">
     <h2 data-no="Erfaring" data-en="Experience">Erfaring</h2>
-    <p data-no="Inspillingsleder – en av hovedrollene jeg har hatt tidligere. Fortsatt fleksibel og med erfaring fra flere andre roller i produksjon."
-       data-en="Production manager – one of my main roles previously. Still flexible, with experience in several other production roles.">Inspillingsleder – en av hovedrollene jeg har hatt tidligere. Fortsatt fleksibel og med erfaring fra flere andre roller i produksjon.</p>
+
+    <div class="experience-list">
+
+      <div class="exp-item">
+        <span class="exp-role" data-no="Regi" data-en="Director">Regi</span>
+        <span class="exp-project">Opera Ung</span>
+      </div>
+
+      <div class="exp-item">
+        <span class="exp-role" data-no="Produsent" data-en="Producer">Produsent</span>
+        <span class="exp-project" data-no="Ekko av henne" data-en="An Echo of Her">Ekko av henne</span>
+      </div>
+
+      <div class="exp-item">
+        <span class="exp-role" data-no="Film og planlegging" data-en="Film & Planning">Film og planlegging</span>
+        <span class="exp-project">Mæd</span>
+      </div>
+
+      <div class="exp-item">
+        <span class="exp-role" data-no="Kamera og stillfoto under arrangement" data-en="Camera & still photography during event">Kamera og stillfoto under arrangement</span>
+        <span class="exp-project">TedX</span>
+      </div>
+
+      <div class="exp-item">
+        <span class="exp-role" data-no="Medgründer og arrangør" data-en="Co-founder & organizer">Medgründer og arrangør</span>
+        <span class="exp-project">CUT! Filmfestival</span>
+      </div>
+
+      <div class="exp-item">
+        <span class="exp-role" data-no="Ballbilder – Freelance fotograf" data-en="Prom photos – Freelance photographer">Ballbilder – Freelance fotograf</span>
+        <span class="exp-project" data-no="10. klasse, Hvaler UGS 2026" data-en="10th grade, Hvaler UGS 2026">10. klasse, Hvaler UGS 2026</span>
+      </div>
+
+      <div class="exp-item">
+        <span class="exp-role" data-no="Produsent og filmskaper – oppfølger vist på egen filmfestival" data-en="Producer & filmmaker – sequel screened at own film festival">Produsent og filmskaper – oppfølger vist på egen filmfestival</span>
+        <span class="exp-project" data-no="Ekko av henne (oppfølger)" data-en="An Echo of Her (sequel)">Ekko av henne (oppfølger)</span>
+      </div>
+
+    </div>
   </section>
 
   <section>
@@ -59,6 +101,7 @@
       <div class="video-frame">
         <iframe src="https://drive.google.com/file/d/VIDEO_ID/preview"></iframe>
       </div>
+      <div class="print-video-placeholder"><p>[Video: Prøveeksamen – Kraft]</p></div>
     </div>
 
     <div class="project">
@@ -66,6 +109,7 @@
       <div class="video-frame">
         <iframe src="https://drive.google.com/file/d/VIDEO_ID/preview"></iframe>
       </div>
+      <div class="print-video-placeholder"><p>[Video: Red Bull Reklame]</p></div>
     </div>
 
     <div class="project">
@@ -73,6 +117,7 @@
       <div class="video-frame">
         <iframe src="https://drive.google.com/file/d/VIDEO_ID/preview"></iframe>
       </div>
+      <div class="print-video-placeholder"><p>[Video: Den ene delen]</p></div>
     </div>
 
   </section>
