--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <div class="project">
       <h3>Prøveeksamen – Kraft</h3>
       <div class="video-frame">
-        <iframe src="https://drive.google.com/file/d/VIDEO_ID/preview"></iframe>
+        <iframe src="https://drive.google.com/file/d/1fXO2uFeBGD7jZtVFWDBIF-bNk1ZB-CmX/preview"></iframe>
       </div>
       <div class="print-video-placeholder"><p>[Video: Prøveeksamen – Kraft]</p></div>
     </div>
@@ -107,7 +107,7 @@
     <div class="project">
       <h3>Red Bull Reklame</h3>
       <div class="video-frame">
-        <iframe src="https://drive.google.com/file/d/VIDEO_ID/preview"></iframe>
+        <iframe src="https://drive.google.com/file/d/1Ru1S7h7hhjcxhzlD99xoBmEOJlJRQSdx/preview"></iframe>
       </div>
       <div class="print-video-placeholder"><p>[Video: Red Bull Reklame]</p></div>
     </div>
@@ -115,18 +115,42 @@
     <div class="project">
       <h3>Den ene delen</h3>
       <div class="video-frame">
-        <iframe src="https://drive.google.com/file/d/VIDEO_ID/preview"></iframe>
+        <iframe src="https://drive.google.com/file/d/1tgSO7QbzUk0puz2hglyt9u8mnE3cUSJq/preview"></iframe>
       </div>
       <div class="print-video-placeholder"><p>[Video: Den ene delen]</p></div>
     </div>
 
   </section>
 
+  <section class="contact">
+    <h2 data-no="Kontakt" data-en="Contact">Kontakt</h2>
+    <div class="contact-grid">
+      <div class="contact-item">
+        <span class="contact-label" data-no="Navn" data-en="Name">Navn</span>
+        <span class="contact-value">Aron Benedict Magnus Folkestad</span>
+      </div>
+      <div class="contact-item">
+        <span class="contact-label" data-no="Adresse" data-en="Address">Adresse</span>
+        <span class="contact-value">Længa 2, Hvaler, Vesterøy</span>
+      </div>
+      <div class="contact-item">
+        <span class="contact-label" data-no="Telefon" data-en="Phone">Telefon</span>
+        <span class="contact-value"><a href="tel:+4792234592">+47 92 234 592</a></span>
+      </div>
+      <div class="contact-item">
+        <span class="contact-label" data-no="E-post" data-en="Email">E-post</span>
+        <span class="contact-value"><a href="mailto:aron.b.folk@gmail.com">aron.b.folk@gmail.com</a></span>
+      </div>
+    </div>
+  </section>
 
 </main>
 
 <footer>
-  © Aron – Film & Video
+  <div class="footer-inner">
+    <div class="footer-name">Aron Benedict Magnus Folkestad</div>
+    <div class="footer-copy">© Aron – Film & Video</div>
+  </div>
 </footer>
 
 <script src="script.js"></script>
