Fikset ekkoavhenne tekst

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
       </div>
 
       <div class="exp-item">
-        <span class="exp-role" data-no="Produsent og filmskaper – oppfølger vist på egen filmfestival" data-en="Producer & filmmaker – sequel screened at own film festival">Produsent og filmskaper – oppfølger vist på egen filmfestival</span>
-        <span class="exp-project" data-no="Ekko av henne (oppfølger)" data-en="An Echo of Her (sequel)">Ekko av henne (oppfølger)</span>
+        <span class="exp-role" data-no="Produsent og filmskaper – Et Ekko av Henne vist på CUT! Glemmen filmfestival" data-en="Producer & filmmaker – Et Ekko av Henne (headliner) screened at CUT! Glemmen filmfestiva">Produsent og filmskaper – Et Ekko av Henne vist på CUT! Glemmen filmfestival</span>
+        <span class="exp-project" data-no="Ekko av henne (Headliner)" data-en="An Echo of Her (Headliner)">Ekko av henne (Headliner)</span>
       </div>
 
     </div>
