Fikset info i teksten. Og portrairt filter

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Aron – Film & Video</title>
+  <title>Aron Benedict Magnus Folkestad – Film & Videoprodusent</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
 <header>
   <div class="header-inner">
-    <div class="header-left">ARON</div>
+    <div class="header-left">Aron Folkestad CV</div>
     <div class="header-right">
       <button class="btn" id="langToggle">EN</button>
       <button class="btn" id="printBtn">Print PDF</button>
@@ -70,27 +70,33 @@
       </div>
 
       <div class="exp-item">
-        <span class="exp-role" data-no="Medgründer og arrangør" data-en="Co-founder & organizer">Medgründer og arrangør</span>
-        <span class="exp-project">CUT! Filmfestival</span>
+        <span class="exp-role" data-no="Arrangør" data-en="Organizer">Arrangør</span>
+        <span class="exp-project">CUT! Glemmen Filmfestival</span>
       </div>
 
       <div class="exp-item">
         <span class="exp-role" data-no="Ballbilder – Freelance fotograf" data-en="Prom photos – Freelance photographer">Ballbilder – Freelance fotograf</span>
-        <span class="exp-project" data-no="10. klasse, Hvaler UGS 2026" data-en="10th grade, Hvaler UGS 2026">10. klasse, Hvaler UGS 2026</span>
+        <span class="exp-project" data-no="10. Trinn i 2026, Hvaler UGS" data-en="10th grade in 2026, Hvaler UGS">10. Trinn i 2026, Hvaler UGS</span>
       </div>
 
       <div class="exp-item">
-        <span class="exp-role" data-no="Produsent og filmskaper – Et Ekko av Henne vist på CUT! Glemmen filmfestival" data-en="Producer & filmmaker – Et Ekko av Henne (headliner) screened at CUT! Glemmen filmfestiva">Produsent og filmskaper – Et Ekko av Henne vist på CUT! Glemmen filmfestival</span>
-        <span class="exp-project" data-no="Ekko av henne (Headliner)" data-en="An Echo of Her (Headliner)">Ekko av henne (Headliner)</span>
+        <span class="exp-role" data-no="Produsent og filmskaper" data-en="Producer & filmmaker">Produsent og filmskaper</span>
+        <span class="exp-project" data-no="Et Ekko av Henne vist på CUT! Glemmen filmfestival" data-en="Et Ekko av Henne screened at CUT! Glemmen filmfestival">Et Ekko av Henne vist på CUT! Glemmen filmfestival</span>
       </div>
 
     </div>
   </section>
 
   <section>
-    <h2>CUT!</h2>
-    <p data-no="Her kan du skrive mer om CUT!, hva det er og hvorfor det er relevant."
-       data-en="Here you can write more about CUT!, what it is and why it matters.">Her kan du skrive mer om CUT!, hva det er og hvorfor det er relevant.</p>
+    <h2>CUT! Glemmen Filmfestival</h2>
+    <p data-no="Jeg var arrangør for CUT! Glemmen Filmfestival, en filmfestival for unge og lokale filmskapere. Festivalen ble arrangert på Fredrikstad Kino 10. februar og samlet publikum og filmskapere til visninger av kortfilmer.
+
+I rollen bidro jeg til planlegging og gjennomføring av festivalen, og fikk verdifull erfaring med prosjektledelse, koordinering og strukturert arrangementsarbeid."
+       data-en="I was one of the organizers of CUT! Glemmen Filmfestival, a film festival for young and local filmmakers. The festival was held at Fredrikstad Kino on February 10th and brought together audiences and filmmakers to screen short films.
+
+In this role, I contributed to the planning and execution of the festival, and gained valuable experience with project management, coordination and structured event work.">Jeg var arrangør for CUT! Glemmen Filmfestival, en filmfestival for unge og lokale filmskapere. Festivalen ble arrangert på Fredrikstad Kino 10. februar og samlet publikum og filmskapere til visninger av kortfilmer.
+
+I rollen bidro jeg til planlegging og gjennomføring av festivalen, og fikk verdifull erfaring med prosjektledelse, koordinering og strukturert arrangementsarbeid.</p>
   </section>
 
   <section>
@@ -101,15 +107,21 @@
       <div class="video-frame">
         <iframe src="https://drive.google.com/file/d/1fXO2uFeBGD7jZtVFWDBIF-bNk1ZB-CmX/preview"></iframe>
       </div>
-      <div class="print-video-placeholder"><p>[Video: Prøveeksamen – Kraft]</p></div>
+      <div class="print-video-placeholder">
+      <p data-no="[Video: Prøveeksamen – Kraft – se online-versjon for avspilling]"
+         data-en="[Video: Prøveeksamen – Kraft – see online version to watch]">[Video: Prøveeksamen – Kraft – se online-versjon for avspilling]</p>
+    </div>
     </div>
 
     <div class="project">
-      <h3>Red Bull Reklame</h3>
+      <h3>Red Bull Mock Reklame</h3>
       <div class="video-frame">
         <iframe src="https://drive.google.com/file/d/1Ru1S7h7hhjcxhzlD99xoBmEOJlJRQSdx/preview"></iframe>
       </div>
-      <div class="print-video-placeholder"><p>[Video: Red Bull Reklame]</p></div>
+      <div class="print-video-placeholder">
+      <p data-no="[Video: Red Bull Mock Reklame – se online-versjon for avspilling]"
+         data-en="[Video: Red Bull Mock Ad – see online version to watch]">[Video: Red Bull Mock Reklame – se online-versjon for avspilling]</p>
+    </div>
     </div>
 
     <div class="project">
@@ -117,7 +129,10 @@
       <div class="video-frame">
         <iframe src="https://drive.google.com/file/d/1tgSO7QbzUk0puz2hglyt9u8mnE3cUSJq/preview"></iframe>
       </div>
-      <div class="print-video-placeholder"><p>[Video: Den ene delen]</p></div>
+      <div class="print-video-placeholder">
+      <p data-no="[Video: Den ene delen – se online-versjon for avspilling]"
+         data-en="[Video: Den ene delen – see online version to watch]">[Video: Den ene delen – se online-versjon for avspilling]</p>
+    </div>
     </div>
 
   </section>
@@ -131,11 +146,11 @@
       </div>
       <div class="contact-item">
         <span class="contact-label" data-no="Adresse" data-en="Address">Adresse</span>
-        <span class="contact-value">Længa 2, Hvaler, Vesterøy</span>
+        <span class="contact-value">Laenga 2, 1684 Vesterøy, Hvaler</span>
       </div>
       <div class="contact-item">
         <span class="contact-label" data-no="Telefon" data-en="Phone">Telefon</span>
-        <span class="contact-value"><a href="tel:+4792234592">+47 92 234 592</a></span>
+        <span class="contact-value"><a href="tel:+4792234592">+47 92 23 45 92</a></span>
       </div>
       <div class="contact-item">
         <span class="contact-label" data-no="E-post" data-en="Email">E-post</span>
@@ -149,7 +164,7 @@
 <footer>
   <div class="footer-inner">
     <div class="footer-name">Aron Benedict Magnus Folkestad</div>
-    <div class="footer-copy">© Aron – Film & Video</div>
+    <div class="footer-copy">© Aron Benedict Magnus Folkestad – Film & Videoprodusent</div>
   </div>
 </footer>
 
