--- a/index.html
+++ b/index.html
@@ -33,10 +33,17 @@
 
   <section class="hero">
     <h2 data-no="Nyeste prosjekt" data-en="Latest project">Nyeste prosjekt</h2>
-    <div class="video-frame">
-      <iframe src="https://drive.google.com/file/d/1MJ8R-8zVDB3qmyHoAP__SnrmKLm5354Q/preview" allow="autoplay"></iframe>
+
+    <div class="video-thumb" data-src="https://drive.google.com/file/d/1MJ8R-8zVDB3qmyHoAP__SnrmKLm5354Q/preview">
+      <img src="https://drive.google.com/thumbnail?id=1MJ8R-8zVDB3qmyHoAP__SnrmKLm5354Q&sz=w1280" alt="Et ekko av henne" />
+      <div class="play-btn">
+        <svg viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="40" cy="40" r="39" fill="rgba(0,0,0,0.45)" stroke="rgba(255,255,255,0.55)" stroke-width="1.5"/>
+          <polygon points="32,24 60,40 32,56" fill="white"/>
+        </svg>
+      </div>
     </div>
-    <!-- Print-only fallback for hero video -->
+
     <div class="print-video-placeholder">
       <p data-no="[Video: Et ekko av henne – se online-versjon for avspilling]"
          data-en="[Video: An echo of her voice – see online version to watch]">[Video: Et ekko av henne – se online-versjon for avspilling]</p>
@@ -89,14 +96,10 @@
 
   <section>
     <h2>CUT! Glemmen Filmfestival</h2>
-    <p data-no="Jeg var arrangør for CUT! Glemmen Filmfestival, en filmfestival for unge og lokale filmskapere. Festivalen ble arrangert på Fredrikstad Kino 10. februar og samlet publikum og filmskapere til visninger av kortfilmer.
-
-I rollen bidro jeg til planlegging og gjennomføring av festivalen, og fikk verdifull erfaring med prosjektledelse, koordinering og strukturert arrangementsarbeid."
-       data-en="I was one of the organizers of CUT! Glemmen Filmfestival, a film festival for young and local filmmakers. The festival was held at Fredrikstad Kino on February 10th and brought together audiences and filmmakers to screen short films.
-
-In this role, I contributed to the planning and execution of the festival, and gained valuable experience with project management, coordination and structured event work.">Jeg var arrangør for CUT! Glemmen Filmfestival, en filmfestival for unge og lokale filmskapere. Festivalen ble arrangert på Fredrikstad Kino 10. februar og samlet publikum og filmskapere til visninger av kortfilmer.
-
-I rollen bidro jeg til planlegging og gjennomføring av festivalen, og fikk verdifull erfaring med prosjektledelse, koordinering og strukturert arrangementsarbeid.</p>
+    <p data-no="Jeg var arrangør for CUT! Glemmen Filmfestival, en filmfestival for unge og lokale filmskapere. Festivalen ble arrangert på Fredrikstad Kino 10. februar og samlet publikum og filmskapere til visninger av kortfilmer og prisutdeling."
+       data-en="I was one of the organizers of CUT! Glemmen Filmfestival, a film festival for young and local filmmakers. The festival was held at Fredrikstad Kino on February 10th and brought together audiences and filmmakers to screen short films and an award ceremony.">Jeg var arrangør for CUT! Glemmen Filmfestival, en filmfestival for unge og lokale filmskapere. Festivalen ble arrangert på Fredrikstad Kino 10. februar og samlet publikum og filmskapere til visninger av kortfilmer og prisutdeling.</p>
+    <p data-no="I rollen bidro jeg til planlegging og gjennomføring av festivalen, og fikk verdifull erfaring med prosjektledelse, koordinering og strukturert arrangementsarbeid."
+       data-en="In this role, I contributed to the planning and execution of the festival, and gained valuable experience with project management, coordination and structured event work.">I rollen bidro jeg til planlegging og gjennomføring av festivalen, og fikk verdifull erfaring med prosjektledelse, koordinering og strukturert arrangementsarbeid.</p>
   </section>
 
   <section>
@@ -104,35 +107,53 @@ I rollen bidro jeg til planlegging og gjennomføring av festivalen, og fikk verd
 
     <div class="project">
       <h3>Prøveeksamen – Kraft</h3>
-      <div class="video-frame">
-        <iframe src="https://drive.google.com/file/d/1fXO2uFeBGD7jZtVFWDBIF-bNk1ZB-CmX/preview"></iframe>
+      <div class="video-thumb" data-src="https://drive.google.com/file/d/1fXO2uFeBGD7jZtVFWDBIF-bNk1ZB-CmX/preview">
+        <img src="https://drive.google.com/thumbnail?id=1fXO2uFeBGD7jZtVFWDBIF-bNk1ZB-CmX&sz=w1280" alt="Prøveeksamen – Kraft" />
+        <div class="play-btn">
+          <svg viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="40" cy="40" r="39" fill="rgba(0,0,0,0.45)" stroke="rgba(255,255,255,0.55)" stroke-width="1.5"/>
+            <polygon points="32,24 60,40 32,56" fill="white"/>
+          </svg>
+        </div>
       </div>
       <div class="print-video-placeholder">
-      <p data-no="[Video: Prøveeksamen – Kraft – se online-versjon for avspilling]"
-         data-en="[Video: Prøveeksamen – Kraft – see online version to watch]">[Video: Prøveeksamen – Kraft – se online-versjon for avspilling]</p>
-    </div>
+        <p data-no="[Video: Prøveeksamen – Kraft – se online-versjon for avspilling]"
+           data-en="[Video: Prøveeksamen – Kraft – see online version to watch]">[Video: Prøveeksamen – Kraft – se online-versjon for avspilling]</p>
+      </div>
     </div>
 
     <div class="project">
       <h3>Red Bull Mock Reklame</h3>
-      <div class="video-frame">
-        <iframe src="https://drive.google.com/file/d/1Ru1S7h7hhjcxhzlD99xoBmEOJlJRQSdx/preview"></iframe>
+      <div class="video-thumb" data-src="https://drive.google.com/file/d/1Ru1S7h7hhjcxhzlD99xoBmEOJlJRQSdx/preview">
+        <img src="https://drive.google.com/thumbnail?id=1Ru1S7h7hhjcxhzlD99xoBmEOJlJRQSdx&sz=w1280" alt="Red Bull Mock Reklame" />
+        <div class="play-btn">
+          <svg viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="40" cy="40" r="39" fill="rgba(0,0,0,0.45)" stroke="rgba(255,255,255,0.55)" stroke-width="1.5"/>
+            <polygon points="32,24 60,40 32,56" fill="white"/>
+          </svg>
+        </div>
       </div>
       <div class="print-video-placeholder">
-      <p data-no="[Video: Red Bull Mock Reklame – se online-versjon for avspilling]"
-         data-en="[Video: Red Bull Mock Ad – see online version to watch]">[Video: Red Bull Mock Reklame – se online-versjon for avspilling]</p>
-    </div>
+        <p data-no="[Video: Red Bull Mock Reklame – se online-versjon for avspilling]"
+           data-en="[Video: Red Bull Mock Ad – see online version to watch]">[Video: Red Bull Mock Reklame – se online-versjon for avspilling]</p>
+      </div>
     </div>
 
     <div class="project">
       <h3>Den ene delen</h3>
-      <div class="video-frame">
-        <iframe src="https://drive.google.com/file/d/1tgSO7QbzUk0puz2hglyt9u8mnE3cUSJq/preview"></iframe>
+      <div class="video-thumb" data-src="https://drive.google.com/file/d/1tgSO7QbzUk0puz2hglyt9u8mnE3cUSJq/preview">
+        <img src="https://drive.google.com/thumbnail?id=1tgSO7QbzUk0puz2hglyt9u8mnE3cUSJq&sz=w1280" alt="Den ene delen" />
+        <div class="play-btn">
+          <svg viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="40" cy="40" r="39" fill="rgba(0,0,0,0.45)" stroke="rgba(255,255,255,0.55)" stroke-width="1.5"/>
+            <polygon points="32,24 60,40 32,56" fill="white"/>
+          </svg>
+        </div>
       </div>
       <div class="print-video-placeholder">
-      <p data-no="[Video: Den ene delen – se online-versjon for avspilling]"
-         data-en="[Video: Den ene delen – see online version to watch]">[Video: Den ene delen – se online-versjon for avspilling]</p>
-    </div>
+        <p data-no="[Video: Den ene delen – se online-versjon for avspilling]"
+           data-en="[Video: Den ene delen – see online version to watch]">[Video: Den ene delen – se online-versjon for avspilling]</p>
+      </div>
     </div>
 
   </section>
@@ -167,6 +188,15 @@ I rollen bidro jeg til planlegging og gjennomføring av festivalen, og fikk verd
     <div class="footer-copy">© Aron Benedict Magnus Folkestad – Film & Videoprodusent</div>
   </div>
 </footer>
+
+<!-- Lightbox -->
+<div id="lightbox">
+  <div class="lb-backdrop" id="lbBackdrop"></div>
+  <div class="lb-content">
+    <button class="lb-close" id="lbClose">✕ Lukk</button>
+    <iframe id="lbFrame" src="" allowfullscreen allow="autoplay"></iframe>
+  </div>
+</div>
 
 <script src="script.js"></script>
 </body>
