--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <section class="intro">
     <div class="portrait"></div>
     <div class="intro-text">
-      <h1 data-no="Film- og videoprodusent" data-en="Film & Video Producer">Film- og videoprodusent</h1>
+      <h1 data-no="Film og videoprodusent" data-en="Film & Video Producer">Film og videoprodusent</h1>
       <p data-no="Jobber med film og video med fokus på historiefortelling, struktur og gjennomføring."
          data-en="Working with film and video, focusing on storytelling, structure and execution.">Jobber med film og video med fokus på historiefortelling, struktur og gjennomføring.</p>
       <p data-no="Erfaring fra både kreative og koordinerende roller i produksjon."
@@ -34,8 +34,8 @@
   <section class="hero">
     <h2 data-no="Nyeste prosjekt" data-en="Latest project">Nyeste prosjekt</h2>
 
-    <div class="video-thumb" data-src="https://drive.google.com/file/d/1MJ8R-8zVDB3qmyHoAP__SnrmKLm5354Q/preview">
-      <img src="https://drive.google.com/thumbnail?id=1MJ8R-8zVDB3qmyHoAP__SnrmKLm5354Q&sz=w1280" alt="Et ekko av henne" />
+    <div class="video-thumb" data-src="https://drive.google.com/file/d/1MJ8R-8zVDB3qmyHoAP__SnrmKLm5354Q/preview"> 
+      <img src="https://drive.google.com/file/d/1Fi-doe5s82KLwGd5EgTA_036IfqvDaeK&sz=w1280" alt="Et ekko av henne" />
       <div class="play-btn">
         <svg viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
           <circle cx="40" cy="40" r="39" fill="rgba(0,0,0,0.45)" stroke="rgba(255,255,255,0.55)" stroke-width="1.5"/>
