--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <h2 data-no="Nyeste prosjekt" data-en="Latest project">Nyeste prosjekt</h2>
 
     <div class="video-thumb" data-src="https://drive.google.com/file/d/1MJ8R-8zVDB3qmyHoAP__SnrmKLm5354Q/preview"> 
-      <img src="https://drive.google.com/file/d/1Fi-doe5s82KLwGd5EgTA_036IfqvDaeK&sz=w1280" alt="Et ekko av henne" />
+      <img src="Bilder/etekkoavhenne-thumbnail.jpg" width="1280" alt="Et ekko av henne" />
       <div class="play-btn">
         <svg viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
           <circle cx="40" cy="40" r="39" fill="rgba(0,0,0,0.45)" stroke="rgba(255,255,255,0.55)" stroke-width="1.5"/>
