--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Aron Benedict Magnus Folkestad – Film & Videoprodusent</title>
+  <link rel="icon" type="image/x-icon" href="Bilder/favicon.ico">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
