--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Aron Benedict Magnus Folkestad – Film & Videoprodusent</title>
-  <link rel="icon" type="image/x-icon" href="Bilder/favicon.ico">
+  <link rel="icon" type="image/png" href="/Bilder/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/Bilder/favicon.svg" />
+  <link rel="shortcut icon" href="/Bilder/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/Bilder/apple-touch-icon.png" />
+  <link rel="manifest" href="/Bilder/site.webmanifest" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
